2007-10-12  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (process_operands): Check the firstxmm0
	field in opcode_modifier for instruction with a implicit
	xmm0 as the first operand.

2007-10-12  Eric B. Weddington  <eweddington@cso.atmel.com>

	* config/tc-avr.c (mcu_types): Add new devices: AT90PWM2B,
	AT90PWM3B.
	* doc/c-avr.texi: Document new devices.

2007-10-12  M R Swami Reddy <MR.Swami.Reddy@nsc.com>

	* config/tc-cr16.c: Update the md_relax_table for 1 word b<cc>
	instruction range information.

2007-10-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/as.texinfo (Object Attributes): New chapter.
	(Pseudo Ops): Document .gnu_attribute.
	(LNS directives): Correct .loc_mark_labels documentation.

2007-10-11  Nick Clifton  <nickc@redhat.com>

	* config/obj-elf.c (obj_elf_section): When pushing a section, if
	there is a comma then the following argument must be a subsection
	number.

2007-10-11  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/c-i386.texi: Update which instruction's operands are
	swapped.

2007-10-11  Nick Clifton  <nickc@redhat.com>

	PR gas/5161
	* config/tc-ia64.c: Allow for translations of error and warning
	messages.
	* po/gas.pot: Regenerate.

	PR gas/5158
	* config/tc-h8300.c (tc_gen_reloc): Allow for translation of error
	message.
	* po/gas.pot: Regenerate.

	PR gas/5155
	* config/tc-msp430.c: Fix spelling typos.

2007-10-11  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Type): Fix typo: STT_FUNC not STT_FUNCTION.

2007-10-08  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (AT): Rename to...
	(ATREG): ... this.
	(AT): New definition.
	(mips_set_options): Rename "noat" to "at"; change the type.
	(mips_opts): Update accordingly.
	(append_insn): Likewise.
	(macro_build_ldst_constoffset): Likewise.
	(load_address): Likewise.
	(macro, macro2): Likewise.
	(s_mipsset): Handle ".set at=REG".  Update handling of ".set at"
	and ".set noat".

2007-10-08  Nick Clifton  <nickc@redhat.com>
