@@ -1,5 +1,10 @@
 2007-10-12  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* config/tc-i386.c (process_operands): Simplify implicit xmm0
+	handling.
+
+2007-10-12  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* config/tc-i386.c (process_operands): Check the firstxmm0
 	field in opcode_modifier for instruction with a implicit
 	xmm0 as the first operand.
